fix: return product&member null error